data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4024.wast
;; 3. **Invalid Function Reference Test**:    - **Description**: Use a `call_indirect` instruction with an invalid function reference in the table.    - **Constraint Check**: Validate the instruction traps when the reference is invalid.    - **Stack Corruption Check**: Verify stack integrity when the trap occurs.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $invalid_func)
    (func $invalid_func (param i32) (result i32)
      (i32.const 0)
    )
    (func (call_indirect (type 0) (i32.const 1)))
  )
  "out of bounds table access"
)